log
Thu 20 Apr 2023 09:21:22 PM UTC: 
 tests:  0|6
total_score: 0/70
f5abaf1
Thu 20 Apr 2023 09:33:20 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:21: error: expected ‘;’ before ‘newmap’
   57 |   newmap -> size = 0
      |                     ^
      |                     ;
   58 |   newmap -> capacity = capacity;
      |   ~~~~~~             
Compilation failed
c671a58
Thu 20 Apr 2023 09:33:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
73a668c
